=============
Release 1.0.0
=============

* prevent the use of negative indices for channels

=============
Release 0.9.9
=============

* fix for shanks (because of optimization in 0.9.8)
* fix for clusters (if global tmp is not created)
* fix for recent versions of MPI (shared memory issues)
* still speeding up the fitting procedure, as a final bottleneck
* fix in the smart search and chunks exploration

=============
Release 0.9.8
=============

* fix a bug while filtering HDF5 file with overwrite set to False
* fix a bug for windows and Intel MPI
* speeding up the fitting procedure
* reducing the memory footprint while optimizing amplitudes for large number of templates
* changing the way of saving overlaps, making use of internal symmetry. Lot of memory saved

=============
Release 0.9.7
=============

* fix a bug in the preview mode
* fix a bug while converting with export_all set to True
* fix a rare bug when both peaks are detect in clustering with smart search
* fix a bug if removing reference channel after filtering has been already done
* fix a bug while converting with export_all
* fix a bug in the filtering introduced in 0.9.6 (last chunk not filtered)
* fix a possible bug in smart search with dynamic bins
* enhance the robustness of the whitening for very large arrays
* speeding up the fitting procedure
* enhancing the non-selection of noisy snippets, and thus clustering
* option to dynamically adapt cc_merge for large number of electrodes
* remove putative mixtures based on variance, speeding up drastically CC estimation

=============
Release 0.9.6
=============

* fixes in the smart search (not all rare cases were covered in 0.9.5)
* fix a bug if multi file is activated with very small chunks
* speeding up the estimation of the templates: less snippets, closer to centroids
* speeding up the estimation of the amplitudes: less noise snippets
* speeding up isolation step during the smart search
* improving mixture removal with fine amplitudes