@@ -3,6 +3,7 @@ Release 1.0.0
 =============
 
 * prevent the use of negative indices for channels
+* fix if no templates are found
 
 =============
 Release 0.9.9
